# ecom

./: .dockerignore  .gitignore  Conversational_Engine_Interview_Prep.docx  DEPLOYMENT_AWS.md  DEPLOYMENT_EC2.md  Dockerfile  LOCAL_DEV_ENV.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
conversational-engine/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  readmee.md  requirements.txt
conversational-engine/alembic/: env.py
conversational-engine/alembic/versions/: 0001_engine_foundation.py  0002_jsonb_normalization.py
conversational-engine/app/: main.py
conversational-engine/docs/help/: purchase-orders.md  stock-transfers.md
conversational-engine/src/conversational_engine/: keyword_sets.py
conversational-engine/src/conversational_engine/agents/: __init__.py  analytics.py  base.py  base_agent.py  entity_resolver.py  executor.py  help.py  help_agent.py  inventory.py  narrator.py  parsing.py  parsing_agent.py  planner.py  products.py  products_agent.py  (+8 more)
conversational-engine/tests/: test_attachment_service.py  test_backend_client.py  test_contracts.py  test_conversation_service.py  test_executor_agent.py  test_executor_metadata_regression.py  test_health.py  test_mongo_repository.py  test_narrator_agent.py  test_orchestrator.py  test_parsing_utils.py  test_provider_registry.py  test_redaction.py  test_redis_cache.py  test_run_stream.py  test_runtime_decisions.py  test_runtime_service.py  test_runtime_state_update.py  test_tool_catalog.py  test_tools_validation.py
(+834 files in other folders)
